# vulkan-engine

./: .gitignore  CMakeLists.txt  Image_comparison.py  README.md  depth_rejection.ipynb  gammaCorrectionTest.ipynb  myconfig.conf
assets/: cornell_box.blend  cornell_box.glb  simple_sphere.blend  simple_sphere.blend1  simple_sphere.glb  sphere test.blend  sphere test.blend1  sphere test.fbx  sphere test.glb  sphere test.gltf  triangle_test.blend  triangle_test.blend1  triangle_test.glb  unit_plane.blend  unit_plane.blend1  unit_plane.glb
cmake/: CPM.cmake
python/: batch_convert_to_png.py  convert_to_png.py  cropping.py  depth_rejection.ipynb  inspect_file_format.py  util.py
renderdoc/: 1_frame_simple.cap
shaders/: Tonemapping.comp  colored_triangle.frag.spv  colored_triangle.vert  colored_triangle.vert.spv  colored_triangle_mesh.vert  colored_triangle_mesh.vert.spv  deferred.frag  deferred.vert  environment_map_background.comp  ggj_work.glsl  gradient.comp.spv  gradient_color.comp.spv  input_structures.glsl  iridescence.frag  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  phong.frag  phong.frag.spv  phong_directional.frag  phong_directional.vert  shadow.vert  sky.comp.spv  tex_image.frag  tex_image.frag.spv
shaders/common/: PBR_functions.glsl  cubemap.glsl  host_device.h  raycommon.glsl  util.glsl  wavefront.glsl
shaders/raytracing/: demodulate.comp  frag_shader.frag  modulate.comp  raytrace.rchit  raytrace.rgen  raytrace.rmiss  raytraceAcc.rgen  raytraceAccIter.rgen  raytraceShadow.rmiss  raytracepbr.rchit  raytracepbrAcc.rchit  raytracepbrAccIter.rchit  svgfAtrous.comp  svgfFilterMoments.comp  svgfPacking.comp  svgf_blend.comp  svgf_reproj.comp  vert_shader.vert
src/: CMakeLists.txt  alignment.hpp  camera.cpp  camera.h  iridescence.h  main.cpp  raytracing.cpp  raytracing.h  shadows.cpp  shadows.h  svgf.cpp  svgf.h  vk_buffers.cpp  vk_buffers.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_extensions.cpp  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_mem_alloc_single.cpp  vk_mem_alloc_single.h  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
